# pyclassmarker

./: .gitignore  README.md  pyproject.toml
pyclassmarker/: convert.py
