[tool.poetry]
name = "pyclassmarker"
version = "0.1.0"
description = "A Python library to handle ClassMarker files"
authors = ["Patrik Spiess <patrik.spiess@bluewin.ch>"]
readme = "README.md"
license = "MIT License"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License", 
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]


[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
